# TradingApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  apis.env  database.cpp  database.h  main.cpp  sentiment.py  update_stocks.py
